# rust

./: .gitignore  GEMINI.md
MessengerApp/: Cargo.toml  GEMINI.md
MessengerApp/src/: main.rs  ui.rs
aes-cbc-gui/: Cargo.toml
calcurator/: Cargo.toml
calcurator/src/: main.rs
cheonbu-wasm/: Cargo.toml  GEMINI.md  index.html
cheonbu-wasm/src/: lib.rs
ctxMap/: AGENTS.md  Cargo.toml  GEMINI.md
ctxMap/src/: main.rs
ex01/src/: main.rs
ex02/src/: main.rs
ex03/src/: main.rs
ex05/src/: main.rs
fft-wasm-demo/fft_wasm/: Cargo.toml  GEMINI.md  index.html
gugudan/: Cargo.toml  GEMINI.md  index.html
gugudan/pkg/: gugudan.d.ts  gugudan.js  gugudan_bg.wasm  gugudan_bg.wasm.d.ts  package.json
gugudan/src/: lib.rs
iced_calendar/: Cargo.toml
iced_calendar/src/: main.rs
iterator_example/: Cargo.toml
iterator_example/src/: main.rs
matrix_demo/: Cargo.toml
matrix_demo/src/: main.rs
notepad/: Cargo.toml
notepad/src/: main.rs
number_stats/: Cargo.toml
oracleTest/: .env.example  AGENTS.md  Cargo.toml  GEMINI.md  check_connection.sql
oracleTest/src/: main.rs  queries.rs
oracleTest/src/common/: app_state.rs  mod.rs  queries.rs  utils.rs
oracleTest/src/config/: mod.rs
oracleTest/src/controller/: mod.rs
oracleTest/src/controllers/: board_controller.rs  dto.rs  error.rs  mod.rs
oracleTest/src/handlers/: board_handler.rs  mod.rs
oracleTest/src/middleware/: logging.rs
oracleTest/src/model/: mod.rs
oracleTest/src/models/: board.rs
oracleTest/src/repositories/: board_repository.rs  mod.rs
oracleTest/src/repository/: mod.rs
oracleTest/src/routes/: mod.rs
oracleTest/src/service/: mod.rs
oracleTest/src/services/: board_service.rs
oracleTest/src/sql/: check_board_exists.sql  delete_board.sql  insert_board.sql  select_board.sql  select_board_by_id.sql  select_board_count.sql  select_board_paged.sql  select_board_seq_currval.sql  tune_select_board_paged.sql  update_board.sql
oracleTest/static/: index.html
rust-watch/: Cargo.toml  GEMINI.md  memory_leak_verification_guide.md
rust-watch/src/: main.rs
shell/cat/: Cargo.toml  test.txt
shell/cp/: Cargo.toml  README.md  test.sh
shell/echo/: Cargo.toml
shell/head/: Cargo.toml
shell/ls/: Cargo.toml
shell/ps/: AGENTS.md  Cargo.toml
slot_machine_gui/: Cargo.toml
slot_machine_gui/src/: main.rs  run_gui.sh
solution/: Cargo.toml  gugudan.json
solution/src/: main.rs
tauri-todo/: GEMINI.md  index.html  pnpm-lock.yaml
tauri-todo/.gemini/: GEMINI.md
todo_cli/: AGENTS.md  Cargo.toml  index.html  todolist.json
todo_cli/src/: lib.rs  main.rs
web/rust-ecommerce/: AGENTS.md  Cargo.toml
web/rust-ecommerce/src/: main.rs
web/rust-ecommerce/src/logging/: mod.rs
web/rust-ecommerce/src/models/: mod.rs
web/rust-ecommerce/src/routes/: mod.rs
web/rust-ecommerce/src/templates/: mod.rs
web/rust-ecommerce/static/css/: style.css
web/rust-ecommerce/static/js/: app.js
web/rust-ecommerce/templates/: health.html  index.html  user_detail.html  user_form.html  user_not_found.html  user_success.html  users.html
write_info/: Cargo.toml  GEMINI.md  main.rs.tmp  my_best_friends.txt
(+16 files in other folders)
