[package]
name = "MessengerApp"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.24" # UI 라이브러리
tokio = { version = "1.0", features = ["full"] } # 비동기 네트워킹
serde = { version = "1.0", features = ["derive"] } # 데이터 직렬화
bincode = "1.3" # 바이너리 전송
winapi = { version = "0.3", features = ["winuser", "windef"] } # winapi features for cross-compilation
aes-gcm = "0.10" # AES-GCM 암호화
rand = { version = "0.8", features = ["std"] } # 난수 생성 (nonce)
hex = "0.4" # 데이터 16진수 인코딩/디코딩
