[package]
name = "cheonbu-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "HtmlInputElement", "Element", 
    "CanvasRenderingContext2d", "CanvasGradient", "console", "Performance"
] }
