[package]
name = "oracleTest"
version = "0.1.0"
edition = "2024"

[dependencies]
oracle = "0.6.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"