[package]
name = "oracleTest"
version = "0.1.0"
edition = "2024"

[dependencies]
oracle = "0.5.8"
r2d2 = "0.8"
r2d2-oracle = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
