[package]
name = "rust-ecommerce"
version = "0.1.0"
edition = "2021"

[dependencies]
# 웹 프레임워크
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# 데이터베이스
oracle = "0.6"

# 직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# 인증
jsonwebtoken = "9.0"
bcrypt = "0.15"

# 시간 및 UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# 로깅 및 오류 처리
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"

# 설정 관리
config = "0.13"
dotenv = "0.15"

# 유틸리티
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# 템플릿 엔진 (HTML 렌더링)
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
